# Gstreamer-mylogo-plugin

./: README.md  meson.build
gst-plugin/: meson.build
gst-plugin/src/: gstmylogo.c  gstmylogo.h
